--- a/index.html
+++ b/index.html
@@ -5,9 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KPesa Landing Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
+
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
+<div class="container">
+        <a href = "#" class="navbar-brand mb-0 h1">
+
+            <img 
+            class = "d-inline-block align-top"
+            src ="KPesaLogoJPEG.jfif" width = "30" height = "30">
+            KPesa
+        </a>
+
+        <!--
+            The button below toggles the navigation bar when
+            the window collapses. The aria contorls are in place for
+            users with additional accessibility needs
+        -->
+        <a>
+            <button 
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            class="navbar-toggler"
+
+            aria-controls="#navbarNav"
+            aria-expanded="False"
+            aria-label="Toggle navigation">
+        
+        <span class="navbar-toggler-icon"></span></button>
+        </a>
+
+        <div class="collapse navbar-collapse"
+        id = "navbarNav">
+
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a href="index.html" class="nav-link active">
+                    Home
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    Explore
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="forum.html" class="nav-link">
+                    Community Forum
+                </a>
+            </li>
+        </ul>
+        </div>
+
+        <form class ="d-flex">
+            <input type="text" class="form-control me-2">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+    </div>
+     
+    </nav>
     <div id="content_container">
         <div id="form_container">
             <div id="form_header_container">
@@ -58,6 +120,7 @@
 
     </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 
