--- a/forum.html
+++ b/forum.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="KPesaStyle.css">
 
 
 </head>
@@ -74,7 +74,9 @@
     
     <h1>Big ol' forum</h1>
 
- <iframe src="http://pub30.bravenet.com/forum/2549579052/" width="400" height="500" frameborder="0" scrolling="Yes"></iframe>
+    <div class = "row-container">
+ <iframe width="100%" height = "600" src="http://pub30.bravenet.com/forum/2549579052/" title="KPesa Forum" frameborder="0" scrolling="Yes"></iframe>
+</div>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
